--- a/roles/mysql-server/templates/mysql.list.j2
+++ b/roles/mysql-server/templates/mysql.list.j2
@@ -1,3 +1,3 @@
-deb https://repo.mysql.com/apt/debian/ buster mysql-{{ mysql_version }}
-deb https://repo.mysql.com/apt/debian/ buster mysql-tools
-deb-src https://repo.mysql.com/apt/debian/ buster mysql-{{ mysql_version }}
+deb https://repo.mysql.com/apt/debian/ bullseye mysql-{{ mysql_version }}
+deb https://repo.mysql.com/apt/debian/ bullseye mysql-tools
+deb-src https://repo.mysql.com/apt/debian/ bullseye mysql-{{ mysql_version }}
