deployment roles and details

--- a/roles/php/templates/harden-php.conf.j2
+++ b/roles/php/templates/harden-php.conf.j2
@@ -1,3 +1,4 @@
 php_admin_value error_reporting 22519
 php_admin_value error_log /var/log/php/errors.apache.log
 php_admin_flag display_errors off
+php_admin_flag allow_url_include off
