--- a/roles/redis/templates/redis.service.j2
+++ b/roles/redis/templates/redis.service.j2
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 ExecStart=/usr/bin/redis-server /etc/redis/redis{{ redis_suffix }}.conf
-ExecStop=/usr/bin/redis-cli shutdown
+ExecStop=/usr/bin/redis-cli -p {{ redis.port }} shutdown
 Restart=always
 User=redis
 Group=redis
